# polysolvelib

./: LICENSE  README.md  pyproject.toml  solver.py
.github/workflows/: test_florp.yml
docs/source/: conf.py  index.rst  usage.rst
docs/source/api/: polysolve.rst
polysolve/: __init__.py  solver.py
tests/: test_quadratic.py
