[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polysolve"
authors = [{name = "Nadir Bouhelali", email = "nadir.bouhelali@stfc.ac.uk"}]
requires-python = ">= 3.8"
readme = "README.md"
description = "Solving 2-3 order polynomials"
license = {text = "BSD-3-Clause"}

keywords = []
dependencies = ["cowsay"]
classifiers = []
dynamic = ["version"]

[project.urls]
Homepage="https://github.com/nadirbstfc/polysolvelib"
Repository="https://github.com/nadirbstfc/polysolvelib.git"

[tool.setuptools.dynamic]
version = {attr = "polysolve.__version__"}
